--- a/src/components/Layout/Pages/ProjectPage/ProjectList.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectList.module.css
@@ -1,6 +1,12 @@
-.list {
+.table {
+  position: relative;
+  top: 130px;
   display: flex;
   justify-content: center;
+  align-items: center;
   text-align: center;
-  margin-left: 200px;
 }
+/* 
+.list {
+  gap: 30px;
+} */
