--- a/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
@@ -1,14 +1,28 @@
 .section {
   position: relative;
   top: 130px;
-
   height: 50px;
-  width: 50vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .inputs {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  text-align: center;
+  width: 50vw;
+  height: 50%;
+}
+
+.inputs input,
+select {
+  background-color: #727577;
+  border-width: 1px;
+  border-color: #1e065e;
+  border-style: solid;
+  border-radius: 3px;
+  width: 38%;
+  color: white;
+  font-size: 16px;
+  padding-left: 1%;
 }
