--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -6,8 +6,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: auto;
+  width: 100vw;
+  height: 10vh;
   background-color: #3b3838;
   padding: 0 2%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
@@ -15,22 +15,24 @@
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  z-index: 10;
+  z-index: 100;
 }
 
 .title {
+  /* position: fixed; */
   color: white;
   font-family: "Lucida Handwriting";
   display: block;
-  margin: 20px;
-  margin-left: 0;
   text-align: center;
+  /* font-size: 1vw; */
 }
 
 .nav {
   display: flex;
   gap: 20px;
   align-items: flex-end;
+  max-width: 60vw;
+  max-height: 8vh;
 }
 
 .nav li {
@@ -45,3 +47,30 @@
   text-align: center;
   font-size: 28px;
 }
+
+.nav li,
+a {
+  color: white;
+  text-decoration: none;
+}
+
+/* .link:link li {
+} */
+
+.nav li:hover,
+a:hover {
+  background-color: orange;
+}
+
+.nav li:active,
+a:active {
+  background-color: red;
+}
+
+/* .link a:hover {
+  background-color: orange;
+}
+
+.link a:active {
+  background-color: red;
+} */
