--- a/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
@@ -1,6 +1,4 @@
 .section {
-  position: relative;
-  top: 130px;
   height: 50px;
   display: flex;
   justify-content: center;
@@ -21,8 +19,9 @@ select {
   border-color: #1e065e;
   border-style: solid;
   border-radius: 3px;
-  width: 38%;
+  width: 36%;
   color: white;
   font-size: 16px;
   padding-left: 1%;
+  max-width: 350px;
 }
