--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -7,9 +7,9 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 10vh;
+  height: auto;
   background-color: #3b3838;
-  padding: 0 2%;
+  padding: 0 4%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: space-between;
@@ -19,33 +19,33 @@
 }
 
 .title {
-  /* position: fixed; */
   color: white;
   font-family: "Lucida Handwriting";
   display: block;
   text-align: center;
-  /* font-size: 1vw; */
+  font-size: 0.8vw;
 }
 
 .nav {
   display: flex;
-  gap: 20px;
+  gap: 2%;
   align-items: flex-end;
-  max-width: 60vw;
-  max-height: 8vh;
+  max-width: 60%;
+
+  /* max-height: 80%; */
 }
 
 .nav li {
   list-style-type: none;
   background-color: #727577;
   border-style: solid;
-  border-width: 1px;
   border-color: #1e065e;
   color: #ffffff;
-  padding: 5px;
-  width: 120px;
+  /* width: 80%; */
   text-align: center;
-  font-size: 28px;
+  font-size: 2vw;
+  min-width: 10vw;
+  min-height: 3vh;
 }
 
 .nav li,
