--- a/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
@@ -19,7 +19,7 @@ select {
   border-color: #1e065e;
   border-style: solid;
   border-radius: 3px;
-  width: 36%;
+  width: 20vw;
   color: white;
   font-size: 16px;
   padding-left: 1%;
