--- a/src/components/Layout/Pages/ProjectPage/ProjectList.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectList.module.css
@@ -4,6 +4,32 @@
   align-items: center;
   text-align: center;
 }
+
+div.empty * {
+  color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  border-color: rgba(0, 0, 0, 0);
+  opacity: 100%;
+  list-style: none;
+  /* display: none; */
+  /* box-shadow: none; */
+  /* display: inline; */
+  -webkit-user-select: none; /* Chrome all / Safari all */
+  -moz-user-select: none; /* Firefox all */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none; /* Likely future */
+  top: -10;
+  height: 0;
+  padding: 0;
+  margin: 0;
+}
+
+.width {
+  /* max-width: 100%; */
+  /* height: 100px; */
+  /* border-style: dotted; */
+}
 /* 
 .list {
   gap: 30px;
