--- a/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
@@ -1,27 +1,30 @@
+.section,
+.inputs {
+  /* border-style: dotted; */
+}
+
 .section {
-  height: 50px;
+  border-color: aqua;
+  /* position: relative; */
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  /* align-items: center; */
+  /* text-align: center; */
+  /* width: 1000px; */
+  /* padding: 0.2%; */
 }
 
 .inputs {
-  display: flex;
-  justify-content: space-between;
-  width: 50vw;
-  height: 50%;
-}
-
-.inputs input,
-select {
   background-color: #727577;
   border-width: 1px;
   border-color: #1e065e;
   border-style: solid;
   border-radius: 3px;
-  width: 20vw;
+  width: 30%;
+  height: 100%;
   color: white;
   font-size: 16px;
   padding-left: 1%;
-  max-width: 350px;
+  margin: 10px;
+  /* max-width: 350px; */
 }
