--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,5 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 .card {
-  padding: 1rem;
+  position: relative;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   border-radius: 14px;
   color: white;
@@ -8,5 +12,8 @@
   border-color: #1e065e;
   border-style: solid;
   background-color: #727577;
-  width: 50vw;
+  /* width: 45vw; */
+  padding: 2%;
+  min-width: 44vw;
+  /* min-height: 10vh; */
 }
