--- a/src/components/Layout/Pages/ProjectPage/ProjectList.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectList.module.css
@@ -26,9 +26,11 @@ div.empty * {
 }
 
 .width {
-  /* max-width: 100%; */
+  /* width: 62em; */
+  min-width: 50%;
+  /* max-width: 50vw; */
   /* height: 100px; */
-  /* border-style: dotted; */
+  border-style: dotted;
 }
 /* 
 .list {
