--- a/src/components/Layout/Pages/ProjectPage/Projects.module.css
+++ b/src/components/Layout/Pages/ProjectPage/Projects.module.css
@@ -18,7 +18,7 @@
 .inline {
   /* margin-left: 17%; */
   /* margin-right: 17%; */
-  display: grid;
+  display: inline-block;
   justify-content: space-evenly;
 
   align-items: center;
@@ -27,4 +27,7 @@
   /* text-align: center; */
   border-color: aqua;
   /* display: inline-block; */
+  width: 1000px;
+  min-width: 0%;
+  max-width: 100%;
 }
