--- a/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectListDescription.module.css
@@ -8,12 +8,17 @@
   /* position: relative; */
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
-  /* text-align: center; */
+  align-items: center;
+  text-align: center;
   /* width: 1000px; */
   /* padding: 0.2%; */
-
+  /* width: 1000px;
+  min-width: 0%;
+  max-width: 100%; */
+  /* display: inline-block; */
+  /* justify-content: space-evenly; */
   /* min-width: 100%; */
+  /* width: 1000px; */
 }
 
 .inputs {
