--- a/src/components/Layout/Pages/ProjectPage/ProjectElement-Expanded.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectElement-Expanded.module.css
@@ -65,6 +65,10 @@
   display: flex;
 }
 
+.cardArticleWidth {
+  width: 60%;
+}
+
 .cardLanguages {
   display: flex;
   justify-content: space-between;
@@ -86,13 +90,30 @@
   font-weight: normal;
 }
 
-.cardLanguages .github {
-  padding-right: 20%;
+.github {
+  margin: 5%;
+  margin-right: 10%;
+
   font-size: 200%;
+
+  text-decoration: underline;
+}
+
+.github a:hover {
+  color: #c0c0c0;
+}
+.github li:active,
+a:active {
+  background-color: none;
+}
+
+.github a:active,
+h4:active {
+  background-color: none;
 }
 
 .cardDescription {
-  padding-top: 2%;
+  /* padding-top: 2%; */
   border-color: rgb(109, 181, 184);
   font-style: italic;
   /* margin-bottom: 1rem; */
@@ -120,7 +141,7 @@
   padding: 0;
   /* width: 10%; */
   height: 100%;
-  width: 100%;
+  width: 50%;
   /* max-width: 90%;
   max-height: 7.5em;
   min-width: 7.5em;
@@ -137,7 +158,7 @@
   /* height: 100%; */
 }
 
-/* .scroller::-webkit-scrollbar {
+.cardArticle::-webkit-scrollbar {
   width: 20px;
 }
 
@@ -147,10 +168,10 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: red;
+  background: #3b3838;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background: #b30000;
-} */
+}
