Slightly altered design and started clean up some CSS code

--- a/src/components/Function/SearchBar.module.css
+++ b/src/components/Function/SearchBar.module.css
@@ -1,4 +1,4 @@
-.visually-hidden {
+/* .visually-hidden {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   height: 1px;
@@ -7,4 +7,4 @@
   white-space: nowrap;
   width: 1px;
   max-width: 350px;
-}
+} */
