--- a/src/components/Layout/Pages/ProjectPage/Projects.module.css
+++ b/src/components/Layout/Pages/ProjectPage/Projects.module.css
@@ -5,26 +5,15 @@
 
 .projects {
   position: relative;
-
-  top: -10;
-  /* padding-top: 30px; */
   border-color: aqua;
-  /* display: grid; */
   margin: 10%;
   margin-top: 5%;
+  display: grid;
   text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .inline {
-  /* margin-left: 17%; */
-  /* margin-right: 17%; */
-  display: grid;
-  justify-content: space-evenly;
-
-  align-items: center;
-  /* margin: 10%; */
-  /* min-width: 100%; */
-  /* text-align: center; */
   border-color: aqua;
-  /* display: inline-block; */
 }
