--- a/src/components/Layout/Pages/ProjectPage/ProjectElement.module.css
+++ b/src/components/Layout/Pages/ProjectPage/ProjectElement.module.css
@@ -67,13 +67,13 @@
   font-weight: normal;
 }
 
-.cardLanguages {
+.cardTechnologiess {
   text-align: left;
   list-style: none;
   border-color: rgb(74, 108, 109);
 }
 
-.cardLanguages li {
+.cardTechnologiess li {
   list-style: none;
   font-weight: normal;
 }
