--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -18,7 +18,8 @@
 }
 
 .card {
-  width: 60rem;
+  width: 1000px;
+  height: 175px;
   display: inline-block;
 }
 
@@ -36,4 +37,54 @@
 .card:focus,
 .cardExpanded:focus {
   color: rebeccapurple;
+}
+
+@media (max-width: 1500px) {
+  .card {
+    width: 1000px;
+  }
+  .cardExpanded {
+    width: 1200px;
+    height: 40rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .card {
+    width: 1000px;
+  }
+  .cardExpanded {
+    width: 1000px;
+    height: 40rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  .card {
+    width: 800px;
+  }
+  .cardExpanded {
+    width: 800px;
+    height: 30rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .card {
+    width: 600px;
+  }
+  .cardExpanded {
+    width: 600px;
+    height: 20rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .card {
+    width: 400px;
+  }
+  .cardExpanded {
+    width: 400px;
+    height: 20rem;
+  }
 }
