--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,78 +1,62 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  /* border: 1px solid rgb(41, 153, 7); */
 }
+
+@font-face {
+  font-family: "Title_Lucida_Handwriting";
+  src: url("../../assets/Fonts/lucida-handwriting/LHANDW.TTF") format("woff2");
+  font-style: normal;
+  font-weight: normal;
+}
+
 .header {
-  /* position: fixed;
-  top: 0;
-  left: 0; */
-  width: 100vw;
-  /* height: auto; */
   background-color: #3b3838;
   padding: 0 4%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  border-bottom: 2px solid white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-sizing: border-box;
   z-index: 100;
+  /* flex: 1 0 0; */
+}
+
+.header a {
+  text-decoration: none;
 }
 
 .title {
   color: white;
-  font-family: "Lucida Handwriting";
+  font-family: "Title_Lucida_Handwriting";
   display: block;
   text-align: center;
-  /* font-size: 60%; */
 }
 
 .nav {
   display: flex;
-  gap: 2%;
-  /* align-items: flex-end; */
-  /* text-align: end; */
-  /* justify-content: flex-end; */
-  /* max-width: 60%; */
-}
-
-.nav li {
-  display: flex;
   justify-content: center;
-  align-items: center;
-  text-align: center;
-  list-style-type: none;
-  background-color: #727577;
-  border-style: solid;
-  border-color: #1e065e;
-  color: #ffffff;
-  /* height: 40px; */
-  height: 3rem;
-  /* font-size: 2vw; */
-  min-width: 12vw;
-  min-height: 3vh;
-  transition: filter 300ms;
-  border-radius: 5px;
-  font-size: 200%;
+  /* align-items: center; */
+  gap: 1%;
+  width: 60%;
 }
 
-.nav li,
-a {
+.nav a {
+  display: flex;
+  flex: 1 0 0;
   color: white;
   text-decoration: none;
+  max-width: 200px;
+  height: 50px;
+  /* border: 1px solid #1e065e; */
+
+  border-radius: 5px;
 }
 
-/* .link:link li {
-} */
-
-.nav li:hover,
-a:hover {
-  /* background-color: orange; */
-  filter: brightness(1.1);
-}
-
-.nav li:active,
-a:active {
-  background-color: red;
+.icons {
+  display: flex;
 }
 
 @media (min-width: 3000px) {
@@ -85,59 +69,40 @@ a:active {
     height: 80px;
   }
 }
-/* @media (max-width: 4000px) {
-  .title {
-    font-size: 200%;
-  }
-  .nav li {
-    font-size: 350%;
-    width: 300px;
-    height: 90px;
+
+@media (max-width: 1400px) {
+  .nav {
+    width: 50%;
   }
 }
-@media (max-width: 5000px) {
-  .title {
-    font-size: 200%;
+
+@media (max-width: 1100px) {
+  .nav {
+    width: 40%;
   }
-  .nav li {
-    font-size: 350%;
-    width: 300px;
-    height: 90px;
-  }
-} */
-@media (max-width: 700px) {
+}
+
+@media (max-width: 1000px) {
   .header {
     display: block;
     padding-bottom: 1%;
     padding-top: 1%;
-    /* align-items: center;
-    justify-content: center; */
   }
 
   .title {
     margin-bottom: 1%;
   }
-
-  .navSeaction {
-    /* width: 25%; */
-    width: 40%;
-    display: grid;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-  }
-  /* .navSeaction ul {
-    width: 100%;
-  } */
   .nav {
-    text-align: center;
     justify-content: center;
-    align-items: center;
     width: 100%;
+    gap: 2%;
   }
-  .nav li {
-    width: 20vw;
-    height: 2.5rem;
-    font-size: 130%;
+  .nav a {
+    display: flex;
+    flex: 1 0 0;
+    max-width: 150px;
+  }
+  .icons {
+    justify-content: center;
   }
 }
